# novaVM

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark-computesdk.md  benchmark.md  deny.toml  install.sh  novavm.service  patch_kernel.py  run_daemon.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
benchmarks/: generate_charts.py  novavm-adapter.ts
benchmarks/results/: burst_tti.json  burst_tti_100.json  sequential_tti.json  staggered_tti.json  staggered_tti_100.json
config/: nova-guest-test.toml  nova.toml
crates/nova-agent/: Cargo.toml
crates/nova-agent/src/: error.rs  exec.rs  health.rs  main.rs  protocol.rs  vsock.rs
crates/nova-api/: Cargo.toml  build.rs
crates/nova-api/proto/: policy.proto  runtime.proto  sandbox.proto  sensor.proto
crates/nova-api/src/: config.rs  image_server.rs  lib.rs  policy_server.rs  registry.rs  rest.rs  sensor_server.rs  server.rs
crates/nova-boot/: Cargo.toml
crates/nova-boot/src/: boot_params.rs  bzimage.rs  cmdline.rs  cpu_setup.rs  elf.rs  error.rs  initrd.rs  layout.rs  lib.rs  pvh.rs
crates/nova-eye/: Cargo.toml
crates/nova-eye-agent/: Cargo.toml
crates/nova-eye-agent/src/: main.rs
crates/nova-eye-common/: Cargo.toml
crates/nova-eye-common/src/: events.rs  lib.rs
crates/nova-eye-ebpf/: Cargo.toml
crates/nova-eye-ebpf/.cargo/: config.toml
crates/nova-eye-ebpf/src/: file.rs  http.rs  http_read.rs  network.rs  process.rs
crates/nova-eye/src/: aggregator.rs  bpf_source.rs  error.rs  filter.rs  guest_source.rs  lib.rs  loader.rs  pipeline.rs  policy.rs  source.rs
crates/nova-kvm/: Cargo.toml
crates/nova-kvm/src/: cap.rs  error.rs  kvm_bindings.rs  lib.rs  vcpu.rs  vm.rs
crates/nova-mem/: Cargo.toml
crates/nova-mem/src/: dirty.rs  error.rs  guest_address.rs  guest_memory.rs  lib.rs  mmap.rs
crates/nova-policy/: Cargo.toml
crates/nova-policy/src/: admission.rs  builtin.rs  bundle.rs  enforcement.rs  engine.rs  error.rs  lib.rs
crates/nova-runtime/: Cargo.toml
crates/nova-runtime/src/: error.rs  lib.rs  pool.rs  snapshot_cache.rs
crates/nova-runtime/src/image/: blob_store.rs  cache.rs  extract.rs  mod.rs  oci.rs  pull.rs  rootfs_cache.rs
crates/nova-runtime/src/network/: mod.rs  tap.rs
crates/nova-runtime/src/sandbox/: lifecycle.rs  mod.rs  orchestrator.rs
crates/nova-virtio/: Cargo.toml
crates/nova-virtio/src/: balloon.rs  blk.rs  console.rs  error.rs  fs.rs  lib.rs  mmio.rs  net.rs  queue.rs  tap.rs  vsock.rs
crates/nova-vmm/: Cargo.toml
crates/nova-vmm/src/: builder.rs  config.rs  device_mgr.rs  exit_handler.rs  lib.rs  main.rs  network.rs  snapshot.rs
crates/nova-wasm/: Cargo.toml
crates/nova-wasm/src/: engine.rs  error.rs  instance.rs  lib.rs  pool.rs  wasi.rs
crates/novactl/: Cargo.toml  build.rs
crates/novactl/assets/: nova-eye-file  nova-eye-http  nova-eye-http-read  nova-eye-network  nova-eye-process
crates/novactl/src/: embedded.rs  main.rs  style.rs
debian/: conffiles  control  postinst  prerm
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: architecture.md  cli-reference.md  configuration.md  images.md  index.md  installation.md  networking.md  observability.md  policy.md  quickstart.md  snapshots.md  troubleshooting.md  windows.md
scripts/: build-deb.sh  package-assets.sh  setup-network.sh  show_events.py
sdk/python/: README.md  pyproject.toml
sdk/python/novavm/: __init__.py  sandbox.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts  sandbox.ts
snap/: snapcraft.yaml
tests/fixtures/: .gitignore  add.wat  download-oci.sh  download.sh  hello.wat  policy_allow.wat  policy_conditional.wat  policy_deny.wat  seed-entropy
tests/fixtures/python-oci/: index.json
tests/integration/: Cargo.toml
tests/integration/src/: bench_subsystems_test.rs  bench_test.rs  boot_test.rs  cache_l1_test.rs  cache_l2_test.rs  cache_l3_test.rs  cache_l4_test.rs  e2e_full_test.rs  e2e_test.rs  ebpf_e2e_test.rs  ebpf_observe_test.rs  guest_observe_test.rs  lib.rs  networking_test.rs  oci_test.rs  policy_daemon_test.rs  policy_eval_test.rs  policy_test.rs  real_test.rs  registry_pull_test.rs  sensor_pipeline_test.rs  sensor_test.rs  wasm_runtime_test.rs  wasm_test.rs
