[workspace]
resolver = "2"
members = ["crates/nova-kvm", "crates/nova-mem", "crates/nova-boot", "crates/nova-virtio", "crates/nova-vmm", "crates/nova-eye-common", "crates/nova-eye", "crates/nova-api", "crates/nova-agent", "crates/nova-runtime", "crates/nova-policy", "crates/nova-wasm", "crates/novactl", "tests/integration"]
exclude = ["crates/nova-eye-ebpf", "crates/nova-eye-agent", "desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "LGPL-2.1"
repository = "https://github.com/harishsg993010/novaVM"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.4"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# gRPC / protobuf
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
comfy-table = "6"

# HTTP / networking
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "stream", "json"] }
futures-util = "0.3"

# Wasm
wasmtime = "27"
wasmtime-wasi = "27"

# eBPF
aya = "0.13"
aya-bpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"

# Containers / images
oci-distribution = "0.11"
flate2 = "1"
tar = "0.4"

# Linux-specific
nix = { version = "0.29", features = ["fs", "ioctl", "mman", "net", "process", "signal", "socket"] }
libc = "0.2"
io-uring = "0.7"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Testing
tempfile = "3"

# Misc
bitflags = "2"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
memmap2 = "0.9"
signal-hook = "0.3"

# Internal crates
nova-kvm = { path = "crates/nova-kvm" }
nova-mem = { path = "crates/nova-mem" }
nova-boot = { path = "crates/nova-boot" }
nova-virtio = { path = "crates/nova-virtio" }
nova-vmm = { path = "crates/nova-vmm" }
nova-eye-common = { path = "crates/nova-eye-common" }
nova-eye-ebpf = { path = "crates/nova-eye-ebpf" }
nova-eye = { path = "crates/nova-eye" }
nova-api = { path = "crates/nova-api" }
nova-agent = { path = "crates/nova-agent" }
nova-runtime = { path = "crates/nova-runtime" }
nova-policy = { path = "crates/nova-policy" }
nova-wasm = { path = "crates/nova-wasm" }
novactl = { path = "crates/novactl" }
