[package]
name = "nova-desktop"
version = "0.1.0"
edition = "2021"
description = "NovaVM Windows CLI — manages NovaVM daemon in WSL over HTTP"
license = "LGPL-2.1"
repository = "https://github.com/harishsg993010/novaVM"

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
