[package]
name = "nova-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaVM gRPC API definitions and generated code"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nova-runtime = { workspace = true }
nova-vmm = { workspace = true }
nova-kvm = { workspace = true }
nova-mem = { workspace = true }
nova-boot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
nova-eye = { workspace = true, features = ["ebpf"] }
nova-eye-common = { workspace = true }
nova-policy = { workspace = true }
crossbeam-channel = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

[[bin]]
name = "nova-daemon"
path = "src/bin/nova-daemon.rs"

[build-dependencies]
tonic-build = { workspace = true }
