[package]
name = "nova-eye"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaVM userspace eBPF sensor"

[features]
default = []
ebpf = ["aya"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
nova-eye-common = { workspace = true }
crossbeam-channel = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
aya = { workspace = true, optional = true }
bytes = { workspace = true }
libc = { workspace = true }
