[package]
name = "nova-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaVM OPA policy engine"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
wasmtime = { workspace = true }
