[package]
name = "nova-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaVM container runtime daemon"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
nova-boot = { workspace = true }
nova-wasm = { workspace = true }
wasmtime = { workspace = true }
