[package]
name = "nova-virtio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Virtio device framework (queue, MMIO transport, devices) for NovaVM"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
bitflags = { workspace = true }
nova-mem = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
