[package]
name = "novactl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaVM unified CLI — daemon, sandbox management, and embedded assets"

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nova-api = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
flate2 = { workspace = true }
